# qa_guru_python_5_18

poetry/: pyproject.toml
