[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Nikit Alekseev <n.alekseev@comagic.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.3.1"
selene = "2.0.0rc2"


[tool.poetry.group.dev.dependencies]
pylint = "3.0.0a6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
